[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spedup-slowed-mv"
version = "0.1.0"
description = "A Python script that automates the creation of nightcore-style/sped-up videos or slowed-down videos by combining a wallpaper with audio extracted from URLs from supported websites like YouTube, YouTube music, and Soundcloud."
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.10"
authors = [
  {name = "sankeer", email = "sankeer28@gmail.com"}
]
maintainers = [
  {name = "sankeer", email = "sankeer28@gmail.com"}
]
keywords = ["nightcore", "video", "automation", "YouTube", "Soundcloud"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "Brotli",
  "certifi",
  "charset-normalizer",
  "idna",
  "mutagen",
  "pycryptodomex",
  "requests",
  "urllib3",
  "websockets",
  "yt-dlp"
]

[project.urls]
Homepage = "https://github.com/sankeer28/Spedup-Slowed-MV"
Repository = "https://github.com/sankeer28/Spedup-Slowed-MV"
"Bug Tracker" = "https://github.com/sankeer28/Spedup-Slowed-MV/issues"

[project.scripts]
spedup-slowed-mv = "main:main"
